--- a/src/Login/login.css
+++ b/src/Login/login.css
@@ -1,15 +1,18 @@
 .login_container{
-  background-color: bisque;
-  border-radius: 15px;
+  background-color: #FDFEFE ;
+border: solid 2px black;
   width: 100%;
   height: 100%;
   margin-top: 5%;
   padding: 5%;
 }
 
-
 .login_form{
   width: 100%;
   height: 100%;
 }
-  
+
+hr{
+  height: 10px;
+  background-color: rgba(8, 1, 13, 0.525);
+}
